Modal z-index fixed when over dynamic table

--- a/front/css/app.css
+++ b/front/css/app.css
@@ -75,6 +75,10 @@ body.with-navbar {
     padding: 4px;
 }
 
+.modal {
+    z-index: 99999;
+}
+
 .tab-pane-loader {
     width: 100%;
     height: 300px;
